tests/fn_overloading.jin
fn extern printf(fmt: *u8, ..) -> i32

fn main {
	add(1, 1)
	add(1.0, 2.5)
	add(1, 3.0) // error
}

fn add(a: int, b: int) {
	printf("add ints: %d\n".ptr, a + b)
}

fn add(a: f32, b: f32) {
	printf("add floats: %f\n".ptr, a + b)
}
